# ASH

./: .gitignore  Ash.sln  Ash.vcxproj  Ash.vcxproj.filters  CMakeLists.txt  README.md
include/: job_state.h  types.h
include/commands/: all_commands.h  bg.h  cat.h  cd.h  clear.h  cp.h  df.h  du.h  echo.h  fg.h  find.h  free.h  head.h  help.h  history.h  jobs.h  kill.h  killall.h  less.h  ln.h  ls.h  mkdir.h  more.h  mv.h  nohup.h  open.h  ps.h  pwd.h  rm.h  rmdir.h  tail.h  top.h  touch.h  uname.h  uptime.h  w.h  who.h
include/core/: command_handler.h  shell.h  terminal.h
include/environment/: environment.h
include/execution/: builtins.h  execution.h
include/input/: input.h
src/: main.cpp  shell.cpp
src/commands/: bg.cpp  cat.cpp  cd.cpp  cf.cpp  clear.cpp  cp.cpp  du.cpp  echo.cpp  fg.cpp  find.cpp  free.cpp  head.cpp  help.cpp  history.cpp  jobs.cpp  kill.cpp  killall.cpp  less.cpp  ln.cpp  ls.cpp  mkdir.cpp  more.cpp  mv.cpp  nohup.cpp  open.cpp  ps.cpp  pwd.cpp  rm.cpp  rmdir.cpp  tail.cpp  top.cpp  touch.cpp  uname.cpp  uptime.cpp  w.cpp  who.cpp
src/core/: CMakeLists.txt  command_handler.cpp  shell.c  shell.cpp  terminal.cpp
src/environment/: CMakeLists.txt  variables.c
src/execution/: CMakeLists.txt  builtins.c  executor.c
src/execution/builtins/: cd.c  echo.c  exit.c
src/extensions/: CMakeLists.txt
src/input/: CMakeLists.txt  tokenizer.c
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
